# ugv_packages

./: .gitmodules  README.md
ekf_ugv/: CMakeLists.txt  package.xml
ekf_ugv/launch/: ekf.launch
ekf_ugv/src/: ekf_w_latency.py
noise_simulator/: CMakeLists.txt  package.xml
noise_simulator/launch/: noise.launch
noise_simulator/src/: imu_noise.py  wheel_noise.py  wheel_noise_basic.py
s2mm_ugv/: CMakeLists.txt  package.xml
s2mm_ugv/include/s2mm_ugv/: aux_funtions.h  s2mm_class.h
s2mm_ugv/launch/: s2mm_ugv.launch
s2mm_ugv/src/: s2mm_ugv.cpp
ugv_localization/: CMakeLists.txt  package.xml
ugv_localization/launch/: ugv_localization.launch
ugv_localization/maps/8_areas_half_bottom/: mapa.yaml
ugv_localization/worlds/: 8_areas_empty_bottom.world  8_areas_full_bottom.world  8_areas_half_bottom.world
